--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,15 @@
+html {
+  font-size: 62.5%; /* 62.5% of 16px is 10px */
+}
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  background-color: white;
 }
 
 * {
